init: updates before upload photo

--- a/index.html
+++ b/index.html
@@ -1,62 +1,30 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <title>Page Not Found</title>
+  <title>Наушенко Д.С. ІП-34</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    * {
-      line-height: 1.2;
-      margin: 0;
-    }
-
-    html {
-      color: #888;
-      display: table;
-      font-family: sans-serif;
-      height: 100%;
-      text-align: center;
-      width: 100%;
-    }
-
-    body {
-      display: table-cell;
-      vertical-align: middle;
-      margin: 2em auto;
-    }
-
-    h1 {
-      color: #555;
-      font-size: 2em;
-      font-weight: 400;
-    }
-
-    p {
-      margin: 0 auto;
-      width: 280px;
-    }
-
-    @media only screen and (max-width: 280px) {
-
-      body,
-      p {
-        width: 95%;
-      }
-
-      h1 {
-        font-size: 1.5em;
-        margin: 0 0 0.3em;
-      }
-
-    }
-  </style>
 </head>
-
 <body>
-  <h1>Page Not Found</h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
+  <h2>Наушенко Дар'я Сергіївна</h2>
+  <p>Дата народження: 19 вересня 2005 року. Місто народження: Київ.</p>
+  <p>Освіта: Ліцей №98, м.Київ;</br>НТУУ "КПІ", м.Київ</p>
+  <p>Хоббі: </p>
+  <ul>
+    <li>Психологія</li>
+    <li>Каяки/байдарки/сапи</li>
+    <li>Перегляд документалок</li>
+  </ul>
+  <p>Улюблені фільми: </p>
+  <ol>
+    <li>Дім дивних дітей міс Перегрін</li>
+    <li>Аліса в країні див</li>
+    <li>Мовчання ягнят</li>
+  </ol>
+  <p>Дубровник – це одне з найкрасивіших міст Хорватії, розташоване на узбережжі Адріатичного моря.
+    Його часто називають “Перлиною Адріатики” завдяки унікальній архітектурі, мальовничим пейзажам та багатій історії.</br>
+    Місто славиться добре збереженим Старим містом, яке оточене потужними середньовічними стінами.
+    Прогулюючись вузькими вуличками, можна побачити старовинні палаци, церкви, площі та величні ворота, які колись захищали мешканців від нападів.</p>
+  <img src="img" alt="альтернативний текст">
 </body>
-
 </html>
-<!-- IE needs 512+ bytes: https://docs.microsoft.com/archive/blogs/ieinternals/friendly-http-error-pages -->
