--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     Його часто називають “Перлиною Адріатики” завдяки унікальній архітектурі, мальовничим пейзажам та багатій історії.</br>
     Місто славиться добре збереженим Старим містом, яке оточене потужними середньовічними стінами.
     Прогулюючись вузькими вуличками, можна побачити старовинні палаци, церкви, площі та величні ворота, які колись захищали мешканців від нападів.</p>
-  <img src="img" alt="альтернативний текст">
+  <img src="img/photo_2025-07-13_20-15-23.jpg" alt="Дубровник"/>
 </body>
 </html>
