init: fixed tag errors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h2>Наушенко Дар'я Сергіївна</h2>
   <p>Дата народження: 19 вересня 2005 року. Місто народження: Київ.</p>
-  <p>Освіта: Ліцей №98, м.Київ;</br>НТУУ "КПІ", м.Київ</p>
+  <p>Освіта: Ліцей №98, м.Київ;<br>НТУУ "КПІ", м.Київ</p>
   <p>Хоббі: </p>
   <ul>
     <li>Психологія</li>
@@ -22,9 +22,9 @@
     <li>Мовчання ягнят</li>
   </ol>
   <p>Дубровник – це одне з найкрасивіших міст Хорватії, розташоване на узбережжі Адріатичного моря.
-    Його часто називають “Перлиною Адріатики” завдяки унікальній архітектурі, мальовничим пейзажам та багатій історії.</br>
+    Його часто називають “Перлиною Адріатики” завдяки унікальній архітектурі, мальовничим пейзажам та багатій історії.<br>
     Місто славиться добре збереженим Старим містом, яке оточене потужними середньовічними стінами.
     Прогулюючись вузькими вуличками, можна побачити старовинні палаци, церкви, площі та величні ворота, які колись захищали мешканців від нападів.</p>
-  <img src="img/photo_2025-07-13_20-15-23.jpg" alt="Дубровник"/>
+  <img src="img/photo_2025-07-13_20-15-23.jpg" alt="Дубровник">
 </body>
 </html>
