init: added link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     Його часто називають “Перлиною Адріатики” завдяки унікальній архітектурі, мальовничим пейзажам та багатій історії.<br>
     Місто славиться добре збереженим Старим містом, яке оточене потужними середньовічними стінами.
     Прогулюючись вузькими вуличками, можна побачити старовинні палаци, церкви, площі та величні ворота, які колись захищали мешканців від нападів.</p>
+  <a href="https://tzdubrovnik.hr/lang/en/index.html">Більше інформації про Дубровник<br></a>
   <img src="img/photo_2025-07-13_20-15-23.jpg" alt="Дубровник">
 </body>
 </html>
